--- a/style.css
+++ b/style.css
@@ -77,12 +77,12 @@ nav >a:hover{
 main{
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.489);
-    padding: 10px;
+    padding: 20px;
     border-radius: 0px 0px 10px 10px;
     margin: auto;
     margin-bottom: 30px;
     min-width: 300px;
-    max-width: 1000px;
+    max-width: 800px;
 }
 
 main > article> h1, h2{
@@ -100,6 +100,10 @@ main article, aside >p{
     font-size: 1em;
     text-indent:20px;
     line-height: 2em;
+}
+
+main{
+    width: 100%;
 }
 
 img{
