--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
     --fonte-padrao: Arial, Helvetica, sans-serif;
     --fonte-destaque: 'Bebas Neue', 'cursiva';
-    --fonte-especial:'android', 'cursiva'
+    --fonte-especial:'android', 'cursiva';
 }
 
 *{
